clang/test/BSC/Negative/Trait/r3/function_return_trait/function_return_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F{};
_Trait F foo1();  // expected-error {{only _Trait pointer type is allowed to be declared}}
_Trait F foo1() {  // expected-error {{only _Trait pointer type is allowed to be declared}}
    _Trait F f; // expected-error {{only _Trait pointer type is allowed to be declared}}
    return f; // expected-error {{use of undeclared identifier 'f'}}
}
_Trait F (*call1)(); // expected-error {{only _Trait pointer type is allowed to be declared}}
_Trait F int::foo2(int* this); // expected-error {{only _Trait pointer type is allowed to be declared}}

_Trait G<T> {};
_Trait G<T> foo3(); // expected-error {{use of undeclared identifier 'T'}}
_Trait G<T> foo4<T>(); // expected-error {{only _Trait pointer type is allowed to be declared}}
_Trait G<T>(*call2)(); // expected-error {{only _Trait pointer type is allowed to be declared}}
_Trait G<T> int::foo5(int* this);  // expected-error {{use of undeclared identifier 'T'}}

_Trait G<int> foo6();  // expected-error {{only _Trait pointer type is allowed to be declared}}
_Trait G<int> foo7<int>();// expected-error {{only _Trait pointer type is allowed to be declared}}  expected-error {{expected template parameter}}
_Trait G<int> (*call3)(); // expected-error {{only _Trait pointer type is allowed to be declared}}
_Trait G<int> int::foo8(int* this); // expected-error {{only _Trait pointer type is allowed to be declared}}